# vcd-to-log

./: .gitignore  CMakeLists.txt  README.md  auto_run.sh  update.sh
examples/: LazyModule.vcd  test.xiang
grammar/: Xiang.g4
src/: CMakeLists.txt  Trace.cpp  Trace.h  XVisitor.cpp  XVisitor.h  builder.xml  main.cpp  ui.cpp
vcd-parser-mt/: CMakeLists.txt  parse_vcd.cpp  parse_vcd.h
verilog-vcd-parser/: CMakeLists.txt
verilog-vcd-parser/src/: CMakeLists.txt  VCDValue.cpp  VCDValue.hpp
xiang-parser/: CMakeLists.txt  XiangBaseVisitor.cpp  XiangBaseVisitor.h  XiangLexer.cpp  XiangLexer.h  XiangParser.cpp  XiangParser.h  XiangVisitor.cpp  XiangVisitor.h
